# kreuzberg

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PYTHON_BINDING_INVESTIGATION_COMPLETE.md  README.md  RUBY_WINDOWS_CI_ANALYSIS.md  TODO.md  Taskfile.yaml  Taskfile.yml  ai-rulez.yaml  biome.json  composer.json  deny.toml  go.work  mkdocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test_ffi_load  test_ffi_load.c  test_panic_guard  test_panic_guard.rs  tsconfig.json
.github/: REPO_DESCRIPTION.md
benchmarks/: README.md  benchmark_baseline.py  end_to_end_benchmark.py  pyproject.toml  serialization_benchmark.py  statistical_benchmark.py
benchmarks/src/: aggregate.py  benchmark.py  categorizer.py  check_installation_sizes.py  cli.py  config.py  config_defaults.py  extractors.py  framework_config.py  logger.py  profiler.py  subprocess_runner.py  types.py
benchmarks/src/kreuzberg_benchmarks/: benchmarks.py  runner.py
benchmarks/tests/: aggregation_test.py  cli_test.py  config_defaults_test.py  conftest.py  field_mapping_test.py  imports_test.py  profiler_baseline_test.py  profiler_test.py  resource_limits_test.py  serialization_test.py  subprocess_runner_test.py  types_test.py
benchmarks/tests/fixtures/aggregated-benchmark-results-17369154065/: aggregated_results.json  all_summaries.json
benchmarks/tests/fixtures/benchmark-visualizations-17369154065/: placeholder.json
benchmarks/tests/test_data/: benchmark_metrics.json  summary_metrics.json
docker/: Dockerfile.core  Dockerfile.full  README.md
docs/: changelog.md  contributing.md  features.md  index.md  llms.txt  paddle-ocr-ort-feasibility.md
e2e/rust/: Cargo.toml
e2e/rust/src/: lib.rs
e2e/rust/tests/: contract_test.rs  email_tests.rs  ocr_test.rs  office_test.rs  office_tests.rs  pdf_test.rs  plugin_apis_test.rs
examples/: server.json
fixtures/: schema.json
kreuzberg/: __init__.py  _config.py  _entity_extraction.py  _extractors.py  _gmft.py  _language_detection.py  _mime_types.py  _pandoc.py  _playa.py  _registry.py  _string.py  _tesseract.py  _types.py  _xlsx.py  cli.py  extraction.py
scripts/: download_gmft_models.py  generate_benchmark_docs.py  generate_benchmark_visualizations.py  list_artifacts.sh  package_node_artifacts.sh  smoke-node.sh  (+2 more)
tools/e2e-generator/: Cargo.toml
tools/e2e-generator/e2e/go/: go.mod
tools/e2e-generator/e2e/java/: pom.xml
tools/e2e-generator/src/: csharp.rs  elixir.rs  fixtures.rs  go.rs  java.rs  main.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs  wasm_deno.rs  wasm_workers.rs
(+1040 files in other folders)
