[project]
name = "benchmarks"
version = "0.1.0"
description = "Comprehensive benchmarking suite for Python text extraction libraries"
readme = "README.md"
keywords = [  ]
license = { text = "MIT" }
authors = [ { name = "Na'aman Hirschfeld", email = "nhirschfed@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
  "Topic :: Text Processing :: General",
  "Typing :: Typed",
]

dependencies = [
  "click>=8.2.1",
  "msgspec>=0.18",
  "psutil>=7",
  "rich>=13.7",
]

optional-dependencies.all = [
  "docling>=2.54",
  "extractous>=0.3",
  "kreuzberg",
  "markitdown>=0.1.3",
  "unstructured[all-docs]>=0.18.15",
]
optional-dependencies.docling = [ "docling>=2.54" ]
optional-dependencies.extractous = [ "extractous>=0.3" ]
optional-dependencies.kreuzberg = [ "kreuzberg" ]
optional-dependencies.markitdown = [ "markitdown[docx,pdf]>=0.1.3" ]
optional-dependencies.unstructured = [ "unstructured[all-docs]>=0.18.15" ]
scripts.benchmark = "src.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=0.24",
  "types-psutil>=7",
  "uv-bump",
]

[tool.uv.sources]
kreuzberg = { workspace = true }
uv-bump = { git = "https://github.com/Goldziher/uv-bump" }
